found script for plotly display

--- a/coneAnalysis/ConeVis.ipynb
+++ b/coneAnalysis/ConeVis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "9b573383-f866-4f0b-8475-4073d2e7c6a1",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "7311505c-82da-46bc-9c43-63edec2eb607",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "82d6e4fe-078e-48ab-a9cc-470dd23bc353",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "id": "9747320b-13df-4458-a2b2-37aee08e4825",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,14 @@
     "        else:\n",
     "            if row[1][\"jerseyNumber\"] in highlight_ids:    \n",
     "                vision_cone_coordinates = get_vision_cone_coordinates(row[1])\n",
-    "                draw.polygon(vision_cone_coordinates, outline='black')\n",
+    "                draw.line([vision_cone_coordinates[0], vision_cone_coordinates[1]])\n",
+    "                draw.line([vision_cone_coordinates[0], vision_cone_coordinates[2]])\n",
+    "\n",
+    "                print(vision_cone_coordinates)\n",
+    "                \n",
+    "                draw.arc([vision_cone_coordinates[2], vision_cone_coordinates[1]], 0, 60, width=2)\n",
+    "                \n",
+    "                #draw.polygon(vision_cone_coordinates, outline='black')\n",
     "                \n",
     "            draw.ellipse((x-p_rad, y-p_rad, x+p_rad, y+p_rad), fill=colors[row[1][\"club\"]])\n",
     "        \n",
@@ -252,13 +259,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "id": "e27fdbbb-4d0a-4e48-9d67-cd99aa976658",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(359.0, 363.0), (363.8993794135044, 382.39061838525345), (373.3430784099669, 349.0617037725)]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "x1 must be greater than or equal to x0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[38], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m gif_df \u001b[38;5;241m=\u001b[39m tracking\u001b[38;5;241m.\u001b[39mfilter(pl\u001b[38;5;241m.\u001b[39mcol(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgameId\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m2022091107\u001b[39m)\u001b[38;5;241m.\u001b[39mfilter(pl\u001b[38;5;241m.\u001b[39mcol(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mplayId\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m959\u001b[39m)\u001b[38;5;241m.\u001b[39mfilter(pl\u001b[38;5;241m.\u001b[39mcol(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mframeId\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m \u001b[43mcreate_play_gif\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgif_df\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_pandas\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m./test\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcrop\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhighlight_ids\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m42\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m52\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[37], line 110\u001b[0m, in \u001b[0;36mcreate_play_gif\u001b[1;34m(play_player_tracking_df, gif_name, crop, highlight_ids)\u001b[0m\n\u001b[0;32m    107\u001b[0m frame \u001b[38;5;241m=\u001b[39m play_player_tracking_df[play_player_tracking_df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mframeId\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m==\u001b[39m i]\u001b[38;5;241m.\u001b[39mcopy(deep\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m    108\u001b[0m field \u001b[38;5;241m=\u001b[39m get_blank_field()\n\u001b[1;32m--> 110\u001b[0m field \u001b[38;5;241m=\u001b[39m \u001b[43mdraw_play_frame\u001b[49m\u001b[43m(\u001b[49m\u001b[43mframe\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhighlight_ids\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    112\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m crop:\n\u001b[0;32m    113\u001b[0m     field \u001b[38;5;241m=\u001b[39m finalize(field, min_x \u001b[38;5;241m=\u001b[39m min_x, max_x \u001b[38;5;241m=\u001b[39m  max_x)\n",
+      "Cell \u001b[1;32mIn[37], line 66\u001b[0m, in \u001b[0;36mdraw_play_frame\u001b[1;34m(frame, highlight_ids)\u001b[0m\n\u001b[0;32m     62\u001b[0m     draw\u001b[38;5;241m.\u001b[39mline([vision_cone_coordinates[\u001b[38;5;241m0\u001b[39m], vision_cone_coordinates[\u001b[38;5;241m2\u001b[39m]])\n\u001b[0;32m     64\u001b[0m     \u001b[38;5;28mprint\u001b[39m(vision_cone_coordinates)\n\u001b[1;32m---> 66\u001b[0m     \u001b[43mdraw\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43mvision_cone_coordinates\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvision_cone_coordinates\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m60\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwidth\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     68\u001b[0m     \u001b[38;5;66;03m#draw.polygon(vision_cone_coordinates, outline='black')\u001b[39;00m\n\u001b[0;32m     70\u001b[0m draw\u001b[38;5;241m.\u001b[39mellipse((x\u001b[38;5;241m-\u001b[39mp_rad, y\u001b[38;5;241m-\u001b[39mp_rad, x\u001b[38;5;241m+\u001b[39mp_rad, y\u001b[38;5;241m+\u001b[39mp_rad), fill\u001b[38;5;241m=\u001b[39mcolors[row[\u001b[38;5;241m1\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mclub\u001b[39m\u001b[38;5;124m\"\u001b[39m]])\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\PIL\\ImageDraw.py:150\u001b[0m, in \u001b[0;36mImageDraw.arc\u001b[1;34m(self, xy, start, end, fill, width)\u001b[0m\n\u001b[0;32m    148\u001b[0m ink, fill \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getink(fill)\n\u001b[0;32m    149\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m ink \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m--> 150\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdraw\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdraw_arc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mxy\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstart\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mend\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mink\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwidth\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mValueError\u001b[0m: x1 must be greater than or equal to x0"
+     ]
+    }
+   ],
    "source": [
-    "gif_df = tracking.filter(pl.col(\"gameId\")==2022091107).filter(pl.col(\"playId\")==959)\n",
-    "create_play_gif(gif_df.to_pandas(), \"./test\", crop=True, highlight_ids=[\"42\", \"52\"])"
+    "gif_df = tracking.filter(pl.col(\"gameId\")==2022091107).filter(pl.col(\"playId\")==959).filter(pl.col('frameId')==1)\n",
+    "create_play_gif(gif_df.to_pandas(), \"./test\", crop=False, highlight_ids=[\"42\", \"52\"])"
    ]
   },
   {
