Change file structure
Storing loose data in subfolder because we're not cavemen

--- a/BDBFormation/BDBFormation.ipynb
+++ b/BDBFormation/BDBFormation.ipynb
@@ -499,67 +499,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 274,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div><style>\n",
-       ".dataframe > thead > tr > th,\n",
-       ".dataframe > tbody > tr > td {\n",
-       "  text-align: right;\n",
-       "}\n",
-       "</style>\n",
-       "<small>shape: (12_187_398, 17)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>gameId</th><th>playId</th><th>nflId</th><th>displayName</th><th>frameId</th><th>time</th><th>jerseyNumber</th><th>club</th><th>playDirection</th><th>x</th><th>y</th><th>s</th><th>a</th><th>dis</th><th>o</th><th>dir</th><th>event</th></tr><tr><td>i64</td><td>i64</td><td>str</td><td>str</td><td>i64</td><td>str</td><td>str</td><td>str</td><td>str</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>str</td><td>str</td><td>str</td></tr></thead><tbody><tr><td>2022090800</td><td>56</td><td>&quot;35472&quot;</td><td>&quot;Rodger Saffold…</td><td>1</td><td>&quot;2022-09-08 20:…</td><td>&quot;76&quot;</td><td>&quot;BUF&quot;</td><td>&quot;left&quot;</td><td>88.37</td><td>27.27</td><td>1.62</td><td>1.15</td><td>0.16</td><td>&quot;231.74&quot;</td><td>&quot;147.9&quot;</td><td>&quot;NA&quot;</td></tr><tr><td>2022090800</td><td>56</td><td>&quot;35472&quot;</td><td>&quot;Rodger Saffold…</td><td>2</td><td>&quot;2022-09-08 20:…</td><td>&quot;76&quot;</td><td>&quot;BUF&quot;</td><td>&quot;left&quot;</td><td>88.47</td><td>27.13</td><td>1.67</td><td>0.61</td><td>0.17</td><td>&quot;230.98&quot;</td><td>&quot;148.53&quot;</td><td>&quot;pass_arrived&quot;</td></tr><tr><td>2022090800</td><td>56</td><td>&quot;35472&quot;</td><td>&quot;Rodger Saffold…</td><td>3</td><td>&quot;2022-09-08 20:…</td><td>&quot;76&quot;</td><td>&quot;BUF&quot;</td><td>&quot;left&quot;</td><td>88.56</td><td>27.01</td><td>1.57</td><td>0.49</td><td>0.15</td><td>&quot;230.98&quot;</td><td>&quot;147.05&quot;</td><td>&quot;NA&quot;</td></tr><tr><td>2022090800</td><td>56</td><td>&quot;35472&quot;</td><td>&quot;Rodger Saffold…</td><td>4</td><td>&quot;2022-09-08 20:…</td><td>&quot;76&quot;</td><td>&quot;BUF&quot;</td><td>&quot;left&quot;</td><td>88.64</td><td>26.9</td><td>1.44</td><td>0.89</td><td>0.14</td><td>&quot;232.38&quot;</td><td>&quot;145.42&quot;</td><td>&quot;NA&quot;</td></tr><tr><td>2022090800</td><td>56</td><td>&quot;35472&quot;</td><td>&quot;Rodger Saffold…</td><td>5</td><td>&quot;2022-09-08 20:…</td><td>&quot;76&quot;</td><td>&quot;BUF&quot;</td><td>&quot;left&quot;</td><td>88.72</td><td>26.8</td><td>1.29</td><td>1.24</td><td>0.13</td><td>&quot;233.36&quot;</td><td>&quot;141.95&quot;</td><td>&quot;NA&quot;</td></tr><tr><td>2022090800</td><td>56</td><td>&quot;35472&quot;</td><td>&quot;Rodger Saffold…</td><td>6</td><td>&quot;2022-09-08 20:…</td><td>&quot;76&quot;</td><td>&quot;BUF&quot;</td><td>&quot;left&quot;</td><td>88.8</td><td>26.7</td><td>1.15</td><td>1.42</td><td>0.12</td><td>&quot;234.48&quot;</td><td>&quot;139.41&quot;</td><td>&quot;pass_outcome_c…</td></tr><tr><td>2022090800</td><td>56</td><td>&quot;35472&quot;</td><td>&quot;Rodger Saffold…</td><td>7</td><td>&quot;2022-09-08 20:…</td><td>&quot;76&quot;</td><td>&quot;BUF&quot;</td><td>&quot;left&quot;</td><td>88.87</td><td>26.64</td><td>0.93</td><td>1.69</td><td>0.09</td><td>&quot;235.77&quot;</td><td>&quot;134.32&quot;</td><td>&quot;NA&quot;</td></tr><tr><td>2022090800</td><td>56</td><td>&quot;35472&quot;</td><td>&quot;Rodger Saffold…</td><td>8</td><td>&quot;2022-09-08 20:…</td><td>&quot;76&quot;</td><td>&quot;BUF&quot;</td><td>&quot;left&quot;</td><td>88.91</td><td>26.59</td><td>0.68</td><td>1.74</td><td>0.07</td><td>&quot;240&quot;</td><td>&quot;131.01&quot;</td><td>&quot;NA&quot;</td></tr><tr><td>2022090800</td><td>56</td><td>&quot;35472&quot;</td><td>&quot;Rodger Saffold…</td><td>9</td><td>&quot;2022-09-08 20:…</td><td>&quot;76&quot;</td><td>&quot;BUF&quot;</td><td>&quot;left&quot;</td><td>88.94</td><td>26.57</td><td>0.42</td><td>1.74</td><td>0.04</td><td>&quot;243.56&quot;</td><td>&quot;122.29&quot;</td><td>&quot;NA&quot;</td></tr><tr><td>2022090800</td><td>56</td><td>&quot;35472&quot;</td><td>&quot;Rodger Saffold…</td><td>10</td><td>&quot;2022-09-08 20:…</td><td>&quot;76&quot;</td><td>&quot;BUF&quot;</td><td>&quot;left&quot;</td><td>88.95</td><td>26.58</td><td>0.14</td><td>1.83</td><td>0.01</td><td>&quot;246.07&quot;</td><td>&quot;85.87&quot;</td><td>&quot;NA&quot;</td></tr><tr><td>2022090800</td><td>56</td><td>&quot;35472&quot;</td><td>&quot;Rodger Saffold…</td><td>11</td><td>&quot;2022-09-08 20:…</td><td>&quot;76&quot;</td><td>&quot;BUF&quot;</td><td>&quot;left&quot;</td><td>88.92</td><td>26.6</td><td>0.26</td><td>1.9</td><td>0.03</td><td>&quot;252.65&quot;</td><td>&quot;326.63&quot;</td><td>&quot;NA&quot;</td></tr><tr><td>2022090800</td><td>56</td><td>&quot;35472&quot;</td><td>&quot;Rodger Saffold…</td><td>12</td><td>&quot;2022-09-08 20:…</td><td>&quot;76&quot;</td><td>&quot;BUF&quot;</td><td>&quot;left&quot;</td><td>88.9</td><td>26.63</td><td>0.51</td><td>2.45</td><td>0.04</td><td>&quot;257.66&quot;</td><td>&quot;315.55&quot;</td><td>&quot;NA&quot;</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>2022110700</td><td>3787</td><td>&quot;NA&quot;</td><td>&quot;football&quot;</td><td>33</td><td>&quot;2022-11-07 23:…</td><td>&quot;NA&quot;</td><td>&quot;football&quot;</td><td>&quot;right&quot;</td><td>24.68</td><td>20.48</td><td>3.76</td><td>5.15</td><td>0.47</td><td>&quot;NA&quot;</td><td>&quot;NA&quot;</td><td>&quot;NA&quot;</td></tr><tr><td>2022110700</td><td>3787</td><td>&quot;NA&quot;</td><td>&quot;football&quot;</td><td>34</td><td>&quot;2022-11-07 23:…</td><td>&quot;NA&quot;</td><td>&quot;football&quot;</td><td>&quot;right&quot;</td><td>25.0</td><td>20.33</td><td>3.34</td><td>4.0</td><td>0.36</td><td>&quot;NA&quot;</td><td>&quot;NA&quot;</td><td>&quot;NA&quot;</td></tr><tr><td>2022110700</td><td>3787</td><td>&quot;NA&quot;</td><td>&quot;football&quot;</td><td>35</td><td>&quot;2022-11-07 23:…</td><td>&quot;NA&quot;</td><td>&quot;football&quot;</td><td>&quot;right&quot;</td><td>25.290001</td><td>20.200001</td><td>2.99</td><td>3.17</td><td>0.31</td><td>&quot;NA&quot;</td><td>&quot;NA&quot;</td><td>&quot;NA&quot;</td></tr><tr><td>2022110700</td><td>3787</td><td>&quot;NA&quot;</td><td>&quot;football&quot;</td><td>36</td><td>&quot;2022-11-07 23:…</td><td>&quot;NA&quot;</td><td>&quot;football&quot;</td><td>&quot;right&quot;</td><td>25.540001</td><td>20.07</td><td>2.72</td><td>2.7</td><td>0.29</td><td>&quot;NA&quot;</td><td>&quot;NA&quot;</td><td>&quot;NA&quot;</td></tr><tr><td>2022110700</td><td>3787</td><td>&quot;NA&quot;</td><td>&quot;football&quot;</td><td>37</td><td>&quot;2022-11-07 23:…</td><td>&quot;NA&quot;</td><td>&quot;football&quot;</td><td>&quot;right&quot;</td><td>25.76</td><td>19.93</td><td>2.49</td><td>2.37</td><td>0.26</td><td>&quot;NA&quot;</td><td>&quot;NA&quot;</td><td>&quot;NA&quot;</td></tr><tr><td>2022110700</td><td>3787</td><td>&quot;NA&quot;</td><td>&quot;football&quot;</td><td>38</td><td>&quot;2022-11-07 23:…</td><td>&quot;NA&quot;</td><td>&quot;football&quot;</td><td>&quot;right&quot;</td><td>25.950001</td><td>19.85</td><td>2.06</td><td>2.56</td><td>0.2</td><td>&quot;NA&quot;</td><td>&quot;NA&quot;</td><td>&quot;NA&quot;</td></tr><tr><td>2022110700</td><td>3787</td><td>&quot;NA&quot;</td><td>&quot;football&quot;</td><td>39</td><td>&quot;2022-11-07 23:…</td><td>&quot;NA&quot;</td><td>&quot;football&quot;</td><td>&quot;right&quot;</td><td>26.1</td><td>19.76</td><td>1.69</td><td>2.6</td><td>0.17</td><td>&quot;NA&quot;</td><td>&quot;NA&quot;</td><td>&quot;NA&quot;</td></tr><tr><td>2022110700</td><td>3787</td><td>&quot;NA&quot;</td><td>&quot;football&quot;</td><td>40</td><td>&quot;2022-11-07 23:…</td><td>&quot;NA&quot;</td><td>&quot;football&quot;</td><td>&quot;right&quot;</td><td>26.219999</td><td>19.68</td><td>1.37</td><td>2.58</td><td>0.15</td><td>&quot;NA&quot;</td><td>&quot;NA&quot;</td><td>&quot;tackle&quot;</td></tr><tr><td>2022110700</td><td>3787</td><td>&quot;NA&quot;</td><td>&quot;football&quot;</td><td>41</td><td>&quot;2022-11-07 23:…</td><td>&quot;NA&quot;</td><td>&quot;football&quot;</td><td>&quot;right&quot;</td><td>26.32</td><td>19.610001</td><td>1.07</td><td>2.74</td><td>0.12</td><td>&quot;NA&quot;</td><td>&quot;NA&quot;</td><td>&quot;NA&quot;</td></tr><tr><td>2022110700</td><td>3787</td><td>&quot;NA&quot;</td><td>&quot;football&quot;</td><td>42</td><td>&quot;2022-11-07 23:…</td><td>&quot;NA&quot;</td><td>&quot;football&quot;</td><td>&quot;right&quot;</td><td>26.389999</td><td>19.559999</td><td>0.8</td><td>2.49</td><td>0.09</td><td>&quot;NA&quot;</td><td>&quot;NA&quot;</td><td>&quot;NA&quot;</td></tr><tr><td>2022110700</td><td>3787</td><td>&quot;NA&quot;</td><td>&quot;football&quot;</td><td>43</td><td>&quot;2022-11-07 23:…</td><td>&quot;NA&quot;</td><td>&quot;football&quot;</td><td>&quot;right&quot;</td><td>26.450001</td><td>19.52</td><td>0.57</td><td>2.38</td><td>0.07</td><td>&quot;NA&quot;</td><td>&quot;NA&quot;</td><td>&quot;NA&quot;</td></tr><tr><td>2022110700</td><td>3787</td><td>&quot;NA&quot;</td><td>&quot;football&quot;</td><td>44</td><td>&quot;2022-11-07 23:…</td><td>&quot;NA&quot;</td><td>&quot;football&quot;</td><td>&quot;right&quot;</td><td>26.49</td><td>19.5</td><td>0.35</td><td>2.13</td><td>0.05</td><td>&quot;NA&quot;</td><td>&quot;NA&quot;</td><td>&quot;NA&quot;</td></tr></tbody></table></div>"
-      ],
-      "text/plain": [
-       "shape: (12_187_398, 17)\n",
-       "┌──────────┬────────┬───────┬───────────┬───┬──────┬────────┬────────┬─────────┐\n",
-       "│ gameId   ┆ playId ┆ nflId ┆ displayNa ┆ … ┆ dis  ┆ o      ┆ dir    ┆ event   │\n",
-       "│ ---      ┆ ---    ┆ ---   ┆ me        ┆   ┆ ---  ┆ ---    ┆ ---    ┆ ---     │\n",
-       "│ i64      ┆ i64    ┆ str   ┆ ---       ┆   ┆ f64  ┆ str    ┆ str    ┆ str     │\n",
-       "│          ┆        ┆       ┆ str       ┆   ┆      ┆        ┆        ┆         │\n",
-       "╞══════════╪════════╪═══════╪═══════════╪═══╪══════╪════════╪════════╪═════════╡\n",
-       "│ 20220908 ┆ 56     ┆ 35472 ┆ Rodger    ┆ … ┆ 0.16 ┆ 231.74 ┆ 147.9  ┆ NA      │\n",
-       "│ 00       ┆        ┆       ┆ Saffold   ┆   ┆      ┆        ┆        ┆         │\n",
-       "│ 20220908 ┆ 56     ┆ 35472 ┆ Rodger    ┆ … ┆ 0.17 ┆ 230.98 ┆ 148.53 ┆ pass_ar │\n",
-       "│ 00       ┆        ┆       ┆ Saffold   ┆   ┆      ┆        ┆        ┆ rived   │\n",
-       "│ 20220908 ┆ 56     ┆ 35472 ┆ Rodger    ┆ … ┆ 0.15 ┆ 230.98 ┆ 147.05 ┆ NA      │\n",
-       "│ 00       ┆        ┆       ┆ Saffold   ┆   ┆      ┆        ┆        ┆         │\n",
-       "│ 20220908 ┆ 56     ┆ 35472 ┆ Rodger    ┆ … ┆ 0.14 ┆ 232.38 ┆ 145.42 ┆ NA      │\n",
-       "│ 00       ┆        ┆       ┆ Saffold   ┆   ┆      ┆        ┆        ┆         │\n",
-       "│ …        ┆ …      ┆ …     ┆ …         ┆ … ┆ …    ┆ …      ┆ …      ┆ …       │\n",
-       "│ 20221107 ┆ 3787   ┆ NA    ┆ football  ┆ … ┆ 0.12 ┆ NA     ┆ NA     ┆ NA      │\n",
-       "│ 00       ┆        ┆       ┆           ┆   ┆      ┆        ┆        ┆         │\n",
-       "│ 20221107 ┆ 3787   ┆ NA    ┆ football  ┆ … ┆ 0.09 ┆ NA     ┆ NA     ┆ NA      │\n",
-       "│ 00       ┆        ┆       ┆           ┆   ┆      ┆        ┆        ┆         │\n",
-       "│ 20221107 ┆ 3787   ┆ NA    ┆ football  ┆ … ┆ 0.07 ┆ NA     ┆ NA     ┆ NA      │\n",
-       "│ 00       ┆        ┆       ┆           ┆   ┆      ┆        ┆        ┆         │\n",
-       "│ 20221107 ┆ 3787   ┆ NA    ┆ football  ┆ … ┆ 0.05 ┆ NA     ┆ NA     ┆ NA      │\n",
-       "│ 00       ┆        ┆       ┆           ┆   ┆      ┆        ┆        ┆         │\n",
-       "└──────────┴────────┴───────┴───────────┴───┴──────┴────────┴────────┴─────────┘"
-      ]
-     },
-     "execution_count": 271,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for week in range(1,10):\n",
-    "    tracking = pl.read_csv(f'../nfl-big-data-bowl-2024/tracking_week_{week}.csv',infer_schema_length=10000)\n",
-    "    tracking = tracking.select(\n",
-    "        'gameId',\n",
-    "        'playId',\n",
-    "        'frameId',\n",
-    "        'playDirection',\n",
-    "        'x',\n",
-    "        'y',\n",
-    "        'o',\n",
-    "        'club'\n",
-    "    )\n",
-    "    tracking.write_parquet(f'../tracking_week_{week}.parquet)"
+    "# for week in range(1,10):\n",
+    "#     tracking = pl.read_csv(f'../nfl-big-data-bowl-2024/tracking_week_{week}.csv',infer_schema_length=10000)\n",
+    "#     tracking = tracking.select(\n",
+    "#         'gameId',\n",
+    "#         'playId',\n",
+    "#         'frameId',\n",
+    "#         'playDirection',\n",
+    "#         'x',\n",
+    "#         'y',\n",
+    "#         'o',\n",
+    "#         'club'\n",
+    "#     )\n",
+    "#     tracking.write_parquet(f'../tracking_week_{week}.parquet')"
    ]
   },
   {
