Ridgeline changes and results

--- a/BDBFormation/BDBFormation.ipynb
+++ b/BDBFormation/BDBFormation.ipynb
@@ -12712,6 +12712,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = output.with_columns([\n",
+    "    pl.when(pl.col('defendersInTheBox')>=7)\n",
+    "    .then('Heavy')\n",
+    "    .otherwise('Light')\n",
+    "    .alias('boxType')\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 249,
    "metadata": {},
    "outputs": [],
@@ -12754,7 +12768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12769,13 +12783,6 @@
    "source": [
     "assert False"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
